--- a/index.html
+++ b/index.html
@@ -1,32 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
-            display:flex;
-            align-items:center;
-            justify-content:center;
-            height:100vh;
-            margin:0;
+        body {
+            height: 100vh;
+            margin: 0;
+            background-image: linear-gradient(rgba(225, 225, 225, 0.8), rgba(0, 0, 0, 0.8));
+            font-family: sans-serif;
         }
-        button{
-            font-size:20px;
-            padding:10px 20px;
-            margin-right:10px;
+
+        button {
+            font-size: 20px;
+            padding: 10px 20px;
+            margin-right: 10px;
+            border: none;
+            border-radius: 5px;
+            text-transform: uppercase;
         }
-        #conter{
-            font-size:24px;
+
+        .container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
+        .counter{
+            padding-top: 25%;
+            padding-bottom: 10px;
+        }
+        #conter {
+            font-size:50px;
+            color: #fff;
+            position: relative;
+            left: 45%;
+            width:10%;
+            text-align: center;
+            background-color: rgba(225,225,225,0.2);
+            border-radius: 5px;
+            box-shadow: 1px 1px 15px 1px rgba(0,0,0,0.3);
+                }
+            button:hover {
+                background-color: #000;
+                color: #fff;
+                border: #fff solid 1px;
+            }
     </style>
 </head>
-<body>
-    <button id="incriment">Incriment</button>
-    <button id="rest">Rest</button>
-    <div id="conter">0</div>
 
+<body><div class="counter">
+        <div id="conter">0</div></div>
+        <div class="container">
+        <button id="incriment">increment</button>
+        <button id="rest">Rest</button>
+    </div>
     <script src="./conter.js"></script>
 </body>
+
 </html>
